style.css: Fixed the page layout after HTML 5 was enforced

--- a/debugging/css/style.css
+++ b/debugging/css/style.css
@@ -200,6 +200,9 @@
 }
 
 body {
+    position: fixed;
+    height: 100%;
+    width: 100%;
 	margin: 0;
 	font-family: Dyslexie;
 	background-color: #F44333;
